--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .openNav{
-	@apply  bg-white font-poppins leading-8  text-center text-gray-700 shadow-md  w-full absolute transition ease-in-out duration-300 z-[100];
+	@apply  bg-white font-poppins leading-8  text-center text-gray-700 shadow-md  w-full h-80 absolute transition ease-in-out duration-300 z-[100];
 }
 
 .closeNav{
