--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 .openNav{
-	@apply  bg-white font-poppins leading-8  text-center text-gray-700 shadow-md  w-full h-80 absolute transition ease-in-out duration-300 z-[100];
+	@apply  bg-white font-poppins leading-8  text-center text-gray-700 shadow-md  w-full h-80 absolute transition ease-in-out duration-100 z-[100];
 }
 
 .closeNav{
-	@apply  font-poppins leading-8  text-center text-gray-700 shadow-md w-full absolute h-0 opacity-0 transition ease-in-out duration-300 z-[100];
+	@apply  font-poppins leading-8  text-center text-gray-700 shadow-md w-full absolute h-0 opacity-0 transition ease-in-out duration-100 z-[100] hidden;
 }
